--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="main">
             <div id="page">
                 
-                    <img src="./portfolio.png" style="padding: 150px;
+                    <img src="PORTFOLIO/portfolio.png" style="padding: 150px;
                     border-radius: 50%;" alt="" />
 
                 <div id="text">
@@ -111,7 +111,7 @@
                         </div>
                         <div id="image">
                             <a href="">
-                                <img src="./calculator.webp" alt="Description of the project" />
+                                <img src="PORTFOLIO/calculator.webp" alt="Description of the project" />
                             </a>
                         </div>
 
@@ -122,7 +122,7 @@
                         </div>
                         <div id="image">
                             <a href="">
-                                <img src="./todo.jpg" alt="Description of the project" />
+                                <img src="PORTFOLIO/todo.jpg" alt="Description of the project" />
                             </a>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                         </div>
                         <div id="image">
                             <a href="">
-                                <img src="./newsletter.png" alt="Description of the project" />
+                                <img src="PORTFOLIO/newsletter.png" alt="Description of the project" />
                             </a>
                         </div>
                     </div>
@@ -156,19 +156,19 @@
                     </a>
 
                     <a class="btn" href="">
-                        <img src="./linkdIn.png" width="40px" height="40px" />
+                        <img src="PORTFOLIO/linkdIn.png" width="40px" height="40px" />
                     </a>
 
                     <a class="btn" href="">
-                        <img src="./github.jpg" width="40px" height="40px" />
+                        <img src="PORTFOLIO/github.jpg" width="40px" height="40px" />
                     </a>
 
                     <a class="btn" href="">
-                        <img src="./twitter.png" width="40px" height="40px" />
+                        <img src="PORTFOLIO/twitter.png" width="40px" height="40px" />
                     </a>
 
                     <a class="btn" href="">
-                        <img src="./insta.webp" width="40px" height="40px" />
+                        <img src="PORTFOLIO/insta.webp" width="40px" height="40px" />
                     </a>
                     
 
