--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <br />
 
                     <a class="btn" href="">
-                        <img src="./gmail.png" width="40px" height="40px" />
+                        <img src="PORTFOLIO/gmail.png" width="40px" height="40px" />
                     </a>
 
                     <a class="btn" href="">
